Refactor FixtureUtils